[gd_scene load_steps=8 format=2]

[ext_resource path="res://World/assets/SacredRock.png" type="Texture" id=1]
[ext_resource path="res://World/assets/SacredRockLight.png" type="Texture" id=2]
[ext_resource path="res://World/assets/PulsingSacredRock.png" type="Texture" id=3]
[ext_resource path="res://World/Source.gd" type="Script" id=4]
[ext_resource path="res://Lexical/Word/WordSpawner.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 19.2333, 8.20599 )

[sub_resource type="CircleShape2D" id=2]
radius = 22.6551

[node name="Source" type="StaticBody2D"]
collision_mask = 0
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.0148523, -9.75317 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -24 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="PulsatingSprite" type="Sprite" parent="."]
visible = false
light_mask = 2
position = Vector2( 0, -24 )
texture = ExtResource( 3 )

[node name="Light" type="Light2D" parent="."]
visible = false
light_mask = 2
position = Vector2( 0.0148523, -24 )
texture = ExtResource( 2 )
range_item_cull_mask = 2
shadow_item_cull_mask = 2

[node name="Spawner" parent="." instance=ExtResource( 6 )]
position = Vector2( -0.084938, 11.2117 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.254814, -8.40877 )
shape = SubResource( 2 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
